app/renderer/main.css
/* ... */
#editor .ace_gutter-layer {
  background: white;
  border-right: none;
}

#editor .ace_gutter-layer .ace_gutter-cell {
  color: #CCC;
}

#editor .ace_tooltip {
  font-family: Helvetica, sans-serif;
  padding: 7px;
  border: 1px solid #DDD;
  border-radius: 4px;
  background: #F8F8F8;
  box-shadow: 0 3px 5px 0px rgba(0,0,0,0.1);
}

#editor span.ace_divert.ace_target,
#editor span.ace_include.ace_filepath {
  text-decoration: underline;
}

/* Hide cursor in unfocussed editor view */
.ace_hidden-cursors {
  opacity:0
}

/* Hide other marks (e.g. bracket matchers) in unfocussed editor view */
.ace_editor:not(.ace_focus) .ace_marker-layer .ace_bracket {
  opacity: 0;
}

#player {
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 50%;
  font-family: system-ui, -apple-system, Geneva, sans-serif;
  font-weight: 400;
  font-size: 14pt;
  color: #555;
}

#player .innerText {
  position: relative;
  padding: 10px 0 50px 0;
  margin: 0;
}

#player .innerText p {
  padding: 0 40px 0 40px;
}

#player .innerText p.customInstruction {
  color: rgb(179, 94, 94);
  font-family: Monaco, 'Courier New', monospace;
}

#player .innerText p.alignCenter {
  text-align: center;
}

#player .innerText p.alignRight {
  text-align: right;
}

#player .innerText p.knotHeading {
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  font-size: 0.85em;
  text-transform: uppercase;
  letter-spacing: 0.08em;
  color: #444;
  border-top: 1px solid #CCC;
  border-bottom: 1px solid #CCC;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-top: 20px;
  margin-bottom: 4px;
}

#player.altKey .innerText p span:hover {
  text-decoration: underline;
  cursor: pointer;
}

#player .hiddenBuffer {
  opacity: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: scroll;
}


#player hr {
  border: 0;
  border-top: 1px solid #CCC;
  width: 100%;
  margin: 0 auto;
}

#player p.choice {
  text-align: center;
}

#player p.choice a {
  color: #BBB;
  transition: color 0.2s;
  text-decoration: none;
}

#player p.choice a:hover {
  color: #555;
  text-decoration: underline;
}

#player p.tags, #player p.choice .tags {
  color: #AAA;
  text-align: center;
  font-family: monospace;
}

#player p.choice .tags {
  padding-left: 1em;
}

#main.hideTags #player p.tags,
#main.hideTags #player p.choice .tags {
    display: none;
}

#player p.end {
  font-weight: bold;
  text-align: center;
}

#player p.error, #player p.error a {
  font-weight: bold;
  color: #C56D6D;
  font-size: 10pt;
  text-align: center;
  font-weight: normal;
}

#player p.error a:hover {
  color: black;
}

#player pre {
  padding-left: 10px;
  white-space: pre-wrap;
  font-size: 9pt;
  font-weight: normal;
}

#player pre.error {
  color: #C56D6D;
}
#player pre.diagnostic {
  color: gray;
}

#player .expressionWatch {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background: white;
  z-index: 1;
}

#player .scrollContainer {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow-y: scroll;
  overflow-x: auto;
}

#player .expressionWatch td {
  /*background: red;*/
  border-bottom: 1px solid #DDD;
}

#player td.expressionLabel {
  background: #FBFBFB;
  color: #878787;
  width: 10%;
  min-width: 80px;
  text-align: right;
  border-right: 1px solid #DDD;
  padding-right: 5px;
  cursor: default;
  -webkit-user-select: none;
}

#player td.expressionInput {
  background: white;
  padding: 0;
  padding-left: 5px;
  position: relative;
}

#player td.expressionInput .removeButton {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  width: 30px;
  text-align: center;
  color: gray;
  font-size: 12pt;
  line-height: 22px;
}

#player td.expressionInput .removeButton:hover {
  color: black;
}

#player td.expressionInput:focus {
  outline: none;
}

#player .evaluationResult {
  padding-bottom: 10px;
  text-align: center;
}

#player .evaluationResult span {
  text-align: center;
  display: inline;
  /*border: 1px solid #BBB;*/
  background: #DDD;
  color: white;
  padding: 2px 20px 2px 20px;
  border-radius: 20px;
  font-size: 9pt;
  white-space: nowrap;
}

#player .evaluationResult.error span {
  background: #bf5e5e;
}

/* Toolbar buttons and spinner */

.button {
  font-family: Verdana, Geneva, sans-serif;
  font-size: 10pt;
  color: #444;
  width: 100px;
  height: 25px;
  position: absolute;
  text-align: center;
  line-height: 25px;
  border-radius: 3px;
  border: 1px solid #BBB;
}

.button:hover {
  background: #EEE;
}

.busySpinner {
  position: absolute;
  right: 75px;
  width: 20px;
  height: 20px;
  top: 3px;
  background-image: url(img/busy.gif);
  background-repeat: no-repeat;
  background-size: cover;

}

#goto-anything {
  position: absolute;
  top: 15%;
  left: 100px;
  right: 100px;
  background: white;
  border: 1px solid #DDD;
  border-radius: 10px;
  box-shadow: 0 5px 6px #EEE;
  z-index: 80; /* toolbar is 50, title bar is 100 */
  opacity: 1.0;
  padding: 10px;
  font-family: Monaco, sans-serif;
  transition: opacity 0.3s;
}

#goto-anything.hidden {
  display: block;
  opacity: 0.0;
}

#goto-anything input {
  width: 100%;
  padding: 5px;
  font-size: 16pt;
  border-radius: 3px;
  border: 0.5px solid #EEE;
  outline: none;
}

#goto-anything ul.results {
  max-height: 400px;
  overflow-y: scroll;
  list-style: none;
  -webkit-padding-start: 0;
  margin-left: 10px;
}

#goto-anything ul.results li {
  border-bottom: 1px solid #E1E1E1;
  font-size: 10pt;
  position: relative;
  height: 36px;
  color: #444;
  cursor: default;
  user-select: none;
}

#goto-anything ul.results li.file {
  font-size: 12pt;
  line-height: 24pt;
}

#goto-anything ul.results li.content {
  color: #888;
}

#goto-anything ul.results li p {
  white-space: nowrap;
  padding: 0;
  margin: 0;
  height: 19px;
}

#goto-anything ul.results li p.meta {
  font-size: 8pt;
  color: #AAA;
}



#goto-anything ul.results li.selected {
  background: #EEE;
  cursor: default;
}
/* ... */

